--- a/style.css
+++ b/style.css
@@ -15,7 +15,23 @@ main {
   display: flex;
 }
 
-.step-box {
+.step-box1 {
+  width: 300px;
+  margin-right: 30px;
+  padding: 10px;
+  position: relative;
+  background-color: #eee;
+}
+
+.step-box2 {
+  width: 300px;
+  margin-right: 30px;
+  padding: 10px;
+  position: relative;
+  background-color: #eee;
+}
+
+.step-box3 {
   width: 300px;
   margin-right: 30px;
   padding: 10px;
@@ -64,4 +80,49 @@ main {
 footer {
   height: 50px;
   background-color: #aaa;
+}
+
+@media screen and (max-width: 425px) {
+  header {
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+    margin: 0;
+  }
+
+  .step-box1 {
+    width: 90%;
+    margin-top: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .step-box2 {
+    width: 90%;
+    margin-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .step-box3 {
+    width: 90%;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .step-image1 {
+    height: 150px;
+  }
+
+  .step-image2 {
+    height: 150px;
+  }
+  .step-image3 {
+    height: 150px;
+  }
 }
