--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ main {
 .step-box1 {
   width: 300px;
   margin-right: 30px;
-  padding: 10px;
   position: relative;
   background-color: #eee;
 }
@@ -26,7 +25,6 @@ main {
 .step-box2 {
   width: 300px;
   margin-right: 30px;
-  padding: 10px;
   position: relative;
   background-color: #eee;
 }
@@ -34,7 +32,6 @@ main {
 .step-box3 {
   width: 300px;
   margin-right: 30px;
-  padding: 10px;
   position: relative;
   background-color: #eee;
 }
@@ -44,21 +41,27 @@ main {
 }
 
 .step-image1 {
+  width: 280px;
   height: 150px;
+  margin: 10px;
   background-image: url(img/flow01.png);
   background-position: bottom;
   background-size: cover;
 }
 
 .step-image2 {
+  width: 280px;
   height: 150px;
+  margin: 10px;
   background-image: url(img/flow02.png);
   background-position: bottom;
   background-size: cover;
 }
 
 .step-image3 {
+  width: 280px;
   height: 150px;
+  margin: 10px;
   background-image: url(img/flow03.png);
   background-position: bottom;
   background-size: cover;
@@ -82,7 +85,7 @@ footer {
   background-color: #aaa;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
   header {
     width: 100%;
   }
